--- a/preco.html
+++ b/preco.html
@@ -187,7 +187,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem para dor (Clínica)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong> <br>50 min - R$150,00<br>90 min - R$265,00<br>110 min - R$285,00<br><strong>Dinâmica:</strong> Com base em sua dor e preferências, um mix de técnicas de massagem e terapia manual serão utilizados para aliviar sua dor e te trazer bem-estar.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20dor." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong> <br>50 min - R$150,00<br>90 min - R$265,00<br>110 min - R$285,00<br>Domiciliar - Consulte valor via Agendamento<br><strong>Dinâmica:</strong> Com base em sua dor e preferências, um mix de técnicas de massagem e terapia manual serão utilizados para aliviar sua dor e te trazer bem-estar.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20dor." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -198,7 +198,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Liberação miofascial (Deep tissue)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -220,7 +220,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem Sueca (Clássica)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong><br>50 min - R$140,00<br>90 min - R$250,00<br>110 min - R$270,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Sueca(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong><br>50 min - R$140,00<br>90 min - R$250,00<br>110 min - R$270,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Sueca(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem Relaxante</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$140,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Relaxante." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$140,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Relaxante." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -242,7 +242,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem para Dor de Cabeça</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20Dor%20de%20Cabeça." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20Dor%20de%20Cabeça." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem para Disfunção Temporomandibular</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20DTM." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20DTM." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem Facial (Lifting Facial)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Facial." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Facial." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -276,7 +276,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Drenagem linfática</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$130,00<br>Pacote 6 sessões: <strong>10% de desconto</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Drenagem%20linf%C3%A1tica." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$130,00<br>Domiciliar - Consulte valor via Agendamento<br>Pacote 6 sessões: <strong>10% de desconto</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Drenagem%20linf%C3%A1tica." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -289,7 +289,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem com pedras quentes</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$160,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20com%20pedras%20quentes." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$160,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20com%20pedras%20quentes." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -303,7 +303,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Ventosaterapia</h4>
-                   <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$160,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Ventosaterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                   <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$160,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Ventosaterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -315,7 +315,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Liberação miofascial (Conceito ROLF)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 60-90 min<br><strong>Preço:</strong> R$250,00<br><strong>Atenção:</strong> O protocolo necessita de em média <strong>10 sessões</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Conceito%20ROLF)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 60-90 min<br><strong>Preço:</strong> R$250,00<br>Domiciliar - Consulte valor via Agendamento<br><strong>Atenção:</strong> O protocolo necessita de em média <strong>10 sessões</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Conceito%20ROLF)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -326,7 +326,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Auriculoterapia</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 30 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Auriculoterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 30 min<br><strong>Preço:</strong> R$100,00<br>Domiciliar - Consulte valor via Agendamento<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Auriculoterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
