--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
                 <li data-target="#header-carousel" data-slide-to="8"></li>
             </ol>
             <div class="carousel-inner">
-                <div class="carousel-item position-relative active" style="min-height: 100vh;">
+                <div class="carousel-item position-relative active" style="min-height: 100vh;background-color: #949494;">
                     
-                    <a href="servicos#tu"><img class="position-absolute w-100 h-100" src="img/domiciliar.jpg" style="object-fit: cover;"></a>
+                    <a href="servicos"><img class="position-absolute w-100 h-100" src="img/domiciliar.jpg" style="object-fit: contain;"></a>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
@@ -177,7 +177,7 @@
                         </div>
                         </div>
                 </div>
-                 <div class="carousel-item position-relative active" style="min-height: 100vh;">
+                 <div class="carousel-item position-relative" style="min-height: 100vh;">
                     
                     <a href="servicos#tu"><img class="position-absolute w-100 h-100" src="img/tu.jpg" style="object-fit: cover;"></a>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
