--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
-                            <h3 class="display-3 text-capitalize text-white mb-3">Atendimento domiciliar ou em sala</h3>
+                            <h3 class="display-3 text-white mb-3">Atendimento domiciliar ou em sala</h3>
                             <p class="mx-md-5 px-5">Disponibilizamos atendimento em sala ou no conforto do seu lar, já pensou em receber uma massagem sem sair de casa?</p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%." target="_blank">Agendar</a>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos" >Saiba mais</a>
