--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-capitalize text-white mb-3">Pedras quentes</h3>
                             <p class="mx-md-5 px-5">Pedras aquecidas para massagear suavemente os músculos, proporcionando alívio de tensões e melhorando a circulação. Deixe-se envolver pelo calor terapêutico das pedras e sinta uma profunda sensação de calma e bem-estar. </p>
-                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20com%20pedras%20quentes." target="_blank">Agendar</a>
+                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20com%20Pedras%20Quentes." target="_blank">Agendar</a>
                                                         <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#pq" >Saiba mais</a>
 
                         </div>
