--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
                             <h3 class="display-3 text-white mb-3">Atendimento domiciliar ou em sala</h3>
-                            <p class="mx-md-5" style="padding: 2rem !important;">"Oferecemos atendimento personalizado, seja em nossa sala ou no conforto do seu lar. <br>Já pensou em receber uma massagem relaxante sem sair de casa?<br> Aproveite essa experiência única onde você se sentir mais à vontade."</p>
+                            <p class="mx-md-5" style="padding: 2rem !important;">Oferecemos atendimento personalizado, seja em nossa sala ou no conforto do seu lar. <br>Já pensou em receber uma massagem relaxante sem sair de casa?<br> Aproveite essa experiência única onde você se sentir mais à vontade.</p>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o." target="_blank">Agendar</a>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos" >Saiba mais</a>
                         </div>
@@ -330,7 +330,7 @@
                 </div>
                 <div class="col-lg-8">
                     <h1 class="mb-4">Relaxe, Revitalize e Recupere</h1>
-                    <p class="pl-4 border-left border-primary">Nossas terapias são baseadas na sua necessidade.<br>Estamos prontos para escutar seus objetivos, preocupações e preferências, para assim pode criar sessões sob medida para lhe proporcionar bem-estar físico e mental.<br>Nossas técnicas nos permitem promover relaxamento e melhora do sono, redução de dores musculares, crônicas e de cabeça, redução de stress e tensões, auxílio no tratamento de determinadas doenças, ajuda na recuperação esportiva e de lesões, redução de inchaços, melhora da circulação e mais...<br>Estamos aqui para ajudar a alcançar seus objetivos de saúde e bem-estar.</p>
+                    <p class="pl-4 border-left border-primary">Nossas terapias são baseadas na sua necessidade, sendo assim dispomos de atendimento em domicílio ou sala e uma variedade de técnicas para atendê-lo(a).<br>Estamos prontos para escutar seus objetivos, preocupações e preferências, para assim pode criar sessões sob medida para lhe proporcionar bem-estar físico e mental.<br>Nossas técnicas nos permitem promover relaxamento e melhora do sono, redução de dores musculares, crônicas e de cabeça, redução de stress e tensões, auxílio no tratamento de determinadas doenças, ajuda na recuperação esportiva e de lesões, redução de inchaços, melhora da circulação e mais...<br>Estamos aqui para ajudar a alcançar seus objetivos de saúde e bem-estar.</p>
                     <div class="row pt-3">
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
